--- a/index.html
+++ b/index.html
@@ -7,20 +7,65 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alkatra&family=Lobster&display=swap" rel="stylesheet">
     <title>MatterJS</title>
 </head>
 
 <body>
 
-    <section id="info">
+    <div id="startPanel" class="hidden">
+        <div class="start-panel-container d-flex justify-content-center align-items-center container-hidden">
+            <div class="panel-container d-flex justify-content-center align-items-center flex-column">
+                <h1>Cenfo shooter</h1>              
+                <p>Ingresa tu nombre</p>
+                <input type="text" class="form-control" id="playerName">
+                <hr>
+                <button onclick="startGame()" class="btn btn-info">Start</button>
+            </div>
+        </div>
+    </div>
+
+    <div id="scorePanel" class="hidden">
         <h1>Cenfo shooter</h1>
         <p>shooting to <span id="characterName"></span></p>
         <hr>
         <p><b><span id="score"></span> collapsed bricks</b></p>
-        <button onclick="location.reload()">Play again</button>
-    </section>
+        <button onclick="location.reload()" class="btn btn-info">Play again</button>
+    </div>
+
+    <div id="currentLevel" class="hidden">
+        <div class="level-container">
+            <div class="d-flex justify-content-center align-items-center w-100 h-100">
+                <h1 class="p-0" id="levelTitle"></h1>
+            </div>
+        </div>
+    </div>
+
+    <div id="playerContainer" class="hidden">
+        <div class="player-container">
+            <div class="d-flex justify-content-center align-items-center w-100 h-100">
+                <h1 class="p-0 mr-4 ml-4" id="playerNameParragraph"></h1>
+            </div>
+        </div>
+    </div>
+    
+    <div id="gamePanel" class="hidden"></div>
+
+    <div id="endGameContainer" class="hidden">
+        <div class="start-panel-container d-flex justify-content-center align-items-center container-hidden">
+            <div class="panel-container d-flex justify-content-center align-items-center flex-column">
+                <h1>¡Felicitaciones!</h1>
+                <p>Has completado todos los niveles</p>              
+                <hr>
+                <button onclick="resetGame()" class="btn btn-info">Iniciar nuevamente</button>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.18.0/matter.min.js"></script>
+    <script src="js/main.js"></script>
     <script src="js/birdsProps.js"></script>
     <script src="js/script.js"></script>
 
