--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                 <button onclick="startGame()" class="btn btn-info">Start</button>
             </div>
         </div>
-    </div>
+    </div> 
 
     <div id="scorePanel" class="hidden">
         <h1>Cenfo shooter</h1>
-        <p>shooting to <span id="characterName"></span></p>
+        <p>Disparando a <span id="characterName"></span></p>
         <hr>
-        <p><b><span id="score"></span> collapsed bricks</b></p>
-        <button onclick="location.reload()" class="btn btn-info">Play again</button>
+        <p><b><span id="score"></span> ladrillos colapsados</b></p>
+        <button onclick="location.reload()" class="btn btn-info w-75 pb-2">seguir/intentar de nuevo</button>
     </div>
 
     <div id="currentLevel" class="hidden">
